Fixes overflow issues with long branch names in .merge-info strong and .dialog-error div

--- a/app/styles/ui/_dialog.scss
+++ b/app/styles/ui/_dialog.scss
@@ -313,6 +313,11 @@ dialog {
       flex-shrink: 0;
       margin-right: var(--spacing);
     }
+
+    div { 
+      overflow-wrap: break-word;
+      overflow-x: hidden;
+    }
   }
 
   &#app-error {
